--- a/jenkinsfile
+++ b/jenkinsfile
@@ -5,7 +5,7 @@ pipeline {
         stage('Clone Repository') {
             steps {
                 script {
-                    git branch: '*/master', url: 'https://github.com/RQMehranhanif/morphemes-app.git'
+                    git branch: 'master', url: 'https://github.com/RQMehranhanif/morphemes-app.git'
                 }
             }
         }
